--- a/workout.css
+++ b/workout.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: gray;
+  background-color: rgb(40, 40, 40);
   font-family: calibri;
   color: white;
 }
@@ -16,7 +16,7 @@ a {
 }
 
 a:hover {
-  color: #facc15; /* gold/yellow */
+  color: #facc15;
   text-shadow: 0 0 5px #facc15;
   transition: 0.3s ease;
 }
@@ -34,60 +34,6 @@ input {
   width: 100%;
 }
 
-.header-container {
-  display: flex;
-  align-items: center;
-  padding: 0 1rem;
-  background-color: rgb(40, 40, 40);
-  height: 50px;
-}
-
-.header-left,
-.header-center,
-.header-right {
-  display: flex;
-  align-items: center;
-}
-
-.header-left {
-  flex: 1;
-  justify-content: flex-start;
-}
-
-.header-center {
-  flex: 2;
-  justify-content: space-between;
-  gap: 4rem;
-}
-
-.header-right {
-  flex: 1;
-  justify-content: flex-end;
-}
-
-#main-header {
-  font-size: 2rem;
-  font-weight: 900;
-  color: white;
-}
-
-.header-center a {
-  font-size: 1.5rem;
-  font-weight: 400;
-  color: white;
-}
-
-.header-center a:hover {
-  color: #facc15;
-  text-shadow: 0 0 5px #facc15;
-  transition: 0.3s ease;
-}
-
-.settings-icon {
-  width: 30px;
-  height: 30px;
-}
-
 #main-body {
   display: flex;
   flex-direction: column;
@@ -100,12 +46,11 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid white;
   margin: 10px 0;
   padding: 10px 0;
-  background-color: rgb(40, 40, 40);
   min-width: 750px;
   max-width: 1000px;
-  border: 1px solid black;
   border-radius: 1rem;
 }
 
@@ -162,11 +107,9 @@ input {
 }
 
 .exercise-card-individual-split input {
-  width: 48%; /* align with headers */
+  width: 48%;
 }
 
-.done-button{
+.done-button {
   padding: auto;
-  
-
 }
