--- a/workout.css
+++ b/workout.css
@@ -140,3 +140,21 @@ input {
 .done-button {
   padding: auto;
 }
+
+.ok-finish {
+  background-color: green;
+  width: 10%;
+  padding: 1rem;
+  font-size: 1.2rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  color: white;
+  border: 1px solid #333;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin: 1rem 0 0 0;
+}
+
+.ok-finish:hover {
+  box-shadow: 0 4px 10px rgba(0, 128, 0, 1);
+  background-color: rgb(0, 150, 0);
+}
