--- a/workout.css
+++ b/workout.css
@@ -100,6 +100,7 @@ input {
   align-items: center;
   justify-content: center;
   border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 .exercise-timer {
