--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ body {
 
 .ok-button-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 1rem;
 }
 
@@ -76,6 +77,28 @@ body {
 }
 
 .ok-button:hover {
-  box-shadow: 0 4px 10px rgba(0, 128, 0, 1);
+  box-shadow: 0 4px 10px rgb(23, 102, 23);
   background-color: rgb(0, 150, 0);
+}
+
+#back-button {
+  height: 20%;
+  padding: 1rem;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background-color: rgb(40, 40, 40);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+}
+
+#back-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 10px rgb(184, 181, 181);
+  background-color: rgb(70, 70, 70);
 }
