--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body {
 }
 
 .ok-button:hover {
+  transform: scale(1.05);
   box-shadow: 0 4px 10px rgb(23, 102, 23);
   background-color: rgb(0, 150, 0);
 }
